--- a/views/mixins/forms.pug
+++ b/views/mixins/forms.pug
@@ -13,9 +13,11 @@ mixin input(f, property, options = { as: 'text' })
   - const value = f.object[property] === undefined ? '' : f.object[property]
   .form-group(class=(f.errors[property] && 'has-danger'))
     label= property
-    input(name=getInputName(f, property) class='form-control' type=options['as'] value=`${value}`)
+    if !f.errors[property]
+      input(name=getInputName(f, property) class='form-control' type=options['as'] value=`${value}`)
     if f.errors[property]
-      .form-control-feedback= f.errors[property].map(({ message }) => message).join('. ')
+      input(name=getInputName(f, property) class='form-control is-invalid' type=options['as'] value=`${value}`)
+      .invalid-feedback= f.errors[property].map(({ message }) => message).join('. ')
 
 mixin button(f, type = 'submit')
   .form-group
