upgrade to new deps versions

--- a/views/layouts/application.pug
+++ b/views/layouts/application.pug
@@ -4,8 +4,7 @@ doctype html
 html(lang="en")
   head
     title= Title
-    script(src='/assets/vendor.js')
-    script(src='/assets/application.js')
+    script(src='/assets/main.js')
   body
     nav.navbar.navbar-expand-lg.navbar-light.bg-faded
       a.navbar-brand(href="/") Task Manager
