--- a/views/layouts/application.pug
+++ b/views/layouts/application.pug
@@ -4,7 +4,7 @@ doctype html
 html(lang="en")
   head
     title= Title
-    script(src='/assets/main.js')
+    link(rel='stylesheet' href='/css/index.css')
   body
     nav.navbar.navbar-expand-lg.navbar-light.bg-faded
       a.navbar-brand(href="/") Task Manager
@@ -28,3 +28,5 @@ html(lang="en")
       if msg
         .alert.alert-info.m-3= msg
       block content
+
+    script(src='/js/index.js')
