fix class table-striped

--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -1,7 +1,7 @@
 extends /layouts/application.pug
 
 block content
-  table.table.table-stripped
+  table.table.table-striped
     thead
       tr
         th Full Name
